@@ -1,3 +1,7 @@
+drkns 01.09.2016 01:21:07 +0200 - build 4773
+
+1. Продолжение 4772.
+
 drkns 31.08.2016 03:08:55 +0200 - build 4772
 
 1. Очередное переосмысление концепции обработки исключений.
